--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							</ul>
 						</li>
 						<li><a href="elements.html">Elements</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
+						<li><a href="#" class="button special">Contact Us</a></li>
 					</ul>
 				</nav>
 			</header>
