--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							</ul>
 						</li>
 						<li><a href="elements.html">Elements</a></li>
-						<li><a href="#" class="button special">Contact Us</a></li>
+						<li><a href="#">Contact Us</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -197,15 +197,15 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="www.twitter.com" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="www.facebook.com" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="www.linkedin.com" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="www.instagram.com" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="www.github.com" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="www.gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Design:Luke & Phoebuss </li>
+					<li>&copy; Hermes-Course Project.</li><li>Design:Luke & Phoebuss </li>
 				</ul>
 			</footer>
 
