--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="www.twitter.com" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="www.facebook.com" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="www.linkedin.com" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="www.instagram.com" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="www.github.com" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="www.gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="http://www.twitter.com" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="http://www.facebook.com" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="http://www.linkedin.com" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="http://www.instagram.com" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="http://www.github.com" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="http://www.gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Hermes-Course Project.</li><li>Design:Luke & Phoebuss </li>
