--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 					<li><a href="http://www.gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Hermes-Course Project.</li><li>Design:Luke & Phoebuss </li>
+					<li>&copy; Hermes-Course Project.</li><li>Design:Luke & Phoebuss & Najla & Ruoxu & Yiyun</li>
 				</ul>
 			</footer>
 
