--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<section id="banner">
 				<div class="content">
 					<header>
-						<h2>The future has landed</h2>
+						<h2>Hermes</h2>
 						<p>And there are no hoverboards or flying cars.<br />
 						Just apps. Lots of mother flipping apps.</p>
 					</header>
