--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 				<div class="content">
 					<header>
 						<h2>Hermes</h2>
-						<p>And there are no hoverboards or flying cars.<br />
-						Just apps. Lots of mother flipping apps.</p>
+						<p>Only the horse knows how the saddle fits.<br />
+							Only the hand knows how the object feels.</p>
 					</header>
-					<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+					<span class="image"><img src="resource/test.png" alt="" /></span>
 				</div>
 				<a href="#one" class="goto-next scrolly">Next</a>
 			</section>
@@ -73,7 +73,7 @@
 						<div class="row">
 							<div class="4u 12u$(medium)">
 								<header>
-									<h2>Odio faucibus ipsum integer consequat</h2>
+									<h2>History</h2>
 									<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
 								</header>
 							</div>
