--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<p>Only the horse knows how the saddle fits.<br />
 							Only the hand knows how the object feels.</p>
 					</header>
-					<span class="image"><img src="resource/test.png" alt="" /></span>
+					<span class="image"><img src="./images/hermes-logo.png" alt="" /></span>
 				</div>
 				<a href="#one" class="goto-next scrolly">Next</a>
 			</section>
